# spotify-backup

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  schema.sql
src/: albums.rs  config.rs  lib.rs  playlists.rs  serialize.rs
src/cli/: mod.rs
src/server/: daemon.rs  db.rs  mod.rs
src/spotify/: client.rs  mod.rs
static/: miligram.css  roboto.css
templates/: backup.html  base.html  index.html
tests/: full_backup.rs
