[package]
name = "spotify-backup"
version = "0.1.0"
authors = ["Simão Mata <sm@0io.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rspotify = "0.8"
serde_json = "1.0"
actix-rt = "1.0"
actix-web = "2.0"
actix-files = "0.2"
actix-session = "0.3"
log = "0.4"
pretty_env_logger = "0.3"
futures = "0.3"
futures-util = "0.3"
r2d2 = "0.8"
r2d2_sqlite = "0.12"
rusqlite = { version = "0.20", features = ["uuid", "functions"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
time = "0.1"
failure = "0.1.6"
toml = "0.5"

[dependencies.tera]
version = "1"
default-features = false

[dev-dependencies]
mockall = "0.5.0"
tempfile = "3.1.0"
lazy_static = "1.4.0"

[patch.crates-io]
rspotify = { git = "https://github.com/ramsayleung/rspotify" }
